This is day 1 of 2022 working, in preparation for day 1 of 2023.  Now to figure out the project layout.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "advent2023rust"
 version = "0.1.0"
 edition = "2021"
+authors = ["John Jordan"]
+description = "My attempt to complete Advent of Code 2023 in Rust."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
