--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ description = "My attempt to complete Advent of Code 2023 in Rust."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+num = "0.4.1"
 regex = "1.10.2"
